--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -1744,7 +1744,12 @@ button,
 .breadcrumbs__link svg {
   width: 5px;
   height: 8px;
-  margin-left: 20px;
+  margin: 0 20px;
+
+}
+
+.breadcrumbs__link:last-of-type svg{
+  display: none;
 }
 
 .breadcrumbs__link:active {
